--- a/.config
+++ b/.config
@@ -1,1 +1,6 @@
-# This is an empty file, please overwrite it after generating the .config file with the source code
+CONFIG_TARGET_armvirt=y
+CONFIG_TARGET_armvirt_64=y
+CONFIG_TARGET_armvirt_64_Default=y
+CONFIG_MODULES=y
+CONFIG_HAVE_DOT_CONFIG=y
+CONFIG_HOST_OS_LINUX=y
